cindy commit sumberdata riau

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="kalsel">Kalimantan Selatan</string>
     <string name="kaltim">Kalimantan Timur</string>
     <string name="kalteng">Kalimantan Tengah</string>
-    <string name="pabar">Papua Utara</string>
+    <string name="pabar">Papua Barat</string>
     <string name="papua1">Papua</string>
     <string name="gorontalo">Gorontalo</string>
     <string name="sulbar">Sulawesi Barat</string>
